--- a/boilerplatapplication/src/app/product/listing/listing.component.html
+++ b/boilerplatapplication/src/app/product/listing/listing.component.html
@@ -14,7 +14,7 @@
             <mat-form-field>
               <mat-label>Cateogry</mat-label>
               <mat-select formControlName="categoryId">
-                <mat-option *ngFor="let category of categories$ | async" value="{{category.id}}">{{category.name}}</mat-option>
+                <mat-option *ngFor="let category of categories$" value="{{category.id}}">{{category.name}}</mat-option>
               </mat-select>
             </mat-form-field>
           </div>
@@ -34,7 +34,7 @@
   </div>
   <!-- </mat-form-field> -->
   <div fxFlex="100" fxflex.lt-sm="100" class="matero-col">
-    <table mat-table [dataSource]="products$ | async" class="mat-elevation-z8">
+    <table mat-table [dataSource]="productCategories$ | async" class="mat-elevation-z8">
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef> Name </th>
@@ -44,7 +44,7 @@
       <!-- Symbol Column -->
       <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef> Category </th>
-        <td mat-cell *matCellDef="let element"> {{element.category}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.categoryName}} </td>
       </ng-container>
 
       <!-- Weight Column -->
